crates/edgedb_macros/tests/ui/invalid_query.rs
use edgedb_macros::edgedb_query;

fn main() {
	edgedb_query!(example_module, "invalid");
}
